php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46064 Exception when creating ReflectionProperty object on dynamicly created property
Submitted: 2008-09-12 11:16 UTC Modified: 2013-09-12 16:51 UTC
From: zemi dot inet at gmail dot com Assigned: felipe (profile)
Status: Closed Package: Reflection related
PHP Version: 5.2.6 OS: Linux amoeba 2.6.22-14-server
Private report: No CVE-ID: None
 [2008-09-12 11:16 UTC] zemi dot inet at gmail dot com
Description:
------------
Always getting exception when creating ReflectionProperty object on dynamicly created property.
Discovered when I tried to use ReflectionProperty::isDefault().
I presume it returns true when property is created on compile-time and false when dynamicly created on run-time?

Reproduce code:
---------------
class x {
 public $x = 1;
 public $y = 1;
}

$o = new x;
$o->z = 1;

$reflector = new ReflectionProperty($o, 'z');

$d = $reflector->isDefault();

Expected result:
----------------
$d == false

Actual result:
--------------
Fatal error: Uncaught exception 'ReflectionException' with message 'Property x::$z does not exist' on line: $reflector = new ReflectionProperty($o, 'z');

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-10-29 15:06 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

We need add some examples for this case. The tests added with the patch can help.
http://news.php.net/php.cvs/53766
 [2013-09-12 16:51 UTC] felipe@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: felipe
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 10:00:02 2026 UTC