- Fixed bug #46064 (Exception when creating ReflectionProperty object on dynamicly created property)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267960 c90b9560-bf6c-de11-be94-00142212c4b1